--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h3 id="current-price">$149.99</h3>
             <p id="old-price"><s>$169.99</s></p>
             <button>
-                <img id="cart-icon" src="icon-cart.svg">
+                <img alt="cart-icon" id="cart-icon" src="icon-cart.svg">
                  <p>Add to Cart</p>
             </button>
         </div>
